# rayTracing3D

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
benches/: main_diffuse.rs
src/: error.rs  geometry.rs  lib.rs  main.rs  object.rs  optic.rs
src/geometry/: object.rs  point.rs  ray.rs  shape.rs  vector.rs
src/optic/: color.rs  image.rs  material.rs
subject/: license_disclaimer.txt
