[package]
name = "ray_tracing_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.57"
float-cmp = "0.9.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
image = "0.25.0"

[dev-dependencies]
plotters = "0.3.5"
