[package]
name = "ray_tracing_3d"
version = "0.1.0"
edition = "2021"
description = "A 3D ray tracing tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.57"
float-cmp = "0.9.0"
rand = "0.8.5"
rand_distr = "0.4.3"
image = "0.25.0"
clap = { version = "4.5.4", features = ["derive"] }
rand_xorshift = "0.3.0"

[dev-dependencies]
plotters = "0.3.5"
criterion = "0.5.1"

[[bench]]
name = "main_diffuse"
harness = false
